--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </nav>
     <main class="articles" id="articles"></main>
     <script>
-        const GITHUB_REPO = 'imjiaoyuan/RSS';
+        const GITHUB_REPO = 'cky2005/RSS';
 
         function escapeString(str) {
             return str
